--- a/akses-sni-bsn.html
+++ b/akses-sni-bsn.html
@@ -10,6 +10,7 @@
     <meta name="data-spm" content="a2o4j" />
     <meta name="robots" content="index, follow" />
     <meta name="og:url" content="https://akses-sni.bsn.go.id/" />
+      <meta name="google-site-verification" content="Cinar9Atm1uuTukRIlKqcVsDYVgv-nQYGzxVTXeh6R8" />
     <meta name="og:title" content="SLOT THAILAND ~ LINK SITUS SLOT GACOR HARI INI PASTI MENANG JACKPOT RESMI 2025" />
     <meta name="og:type" content="product" />
     <meta name="og:description" content="Temukan pengalaman bermain slot online terbaik di SLOT THAILAND, situs resmi slot gacor 2025 yang menawarkan peluang menang jackpot besar setiap hari. Dengan server Thailand berlisensi dan RTP tinggi hingga 95%, platform ini menjadi pilihan utama bagi pecinta slot yang mencari kemenangan maksimal. Nikmati berbagai permainan dari provider ternama seperti Pragmatic Play, PG Soft, dan Habanero, lengkap dengan fitur Scatter Hitam dan bonus menarik lainnya. Daftar sekarang dan raih kesempatan menang besar di situs slot terpercaya hari ini!​" />
