--- a/ijtk-iainkendarii.html
+++ b/ijtk-iainkendarii.html
@@ -9,6 +9,7 @@
   <meta name="aplus-auto-exp" content='[{"filter":"exp-tracking=suggest-official-store","logkey":"/lzdse.result.os_impr","props":["href"],"tag":"a"}]' />
   <meta name="data-spm" content="12anj4u" />
   <meta name="robots" content="index, follow" />
+  <meta name="google-site-verification" content="BnwdhVjseLRJTTqhGduY9ldlUkOReJBMlwEZH9emIts" />
   <meta name="og:url" content="https://ijtk.iainkendari.ac.id/" />
   <meta name="og:title" content="Slot Gacor ~ Link Situs APK Slot Thailand Versi Terbaru Hari Ini Pasti Menang Banyak" />
   <meta name="og:type" content="product" />
