--- a/prosiding-iainponorogo.html
+++ b/prosiding-iainponorogo.html
@@ -10,6 +10,7 @@
   <meta name="data-spm" content="12anj4u" />
   <meta name="robots" content="index, follow" />
   <meta name="google-site-verification" content="BnwdhVjseLRJTTqhGduY9ldlUkOReJBMlwEZH9emIts" />
+  <meta name="google-site-verification" content="UsXHNcTKMdZ4hKs1haKvo9j5moTirLWtb6vrORrU3V4" />
   <meta name="og:url" content="https://prosiding.iainponorogo.ac.id/" />
   <meta name="og:title" content="Slot Gacor ~ Link Situs APK Slot Thailand Versi Terbaru Hari Ini Pasti Menang Banyak" />
   <meta name="og:type" content="product" />
