--- a/snbp-undip.html
+++ b/snbp-undip.html
@@ -11,6 +11,7 @@
     <meta name="robots" content="index, follow">
     <meta name="og:url" content="https://snbp.undip.ac.id/">
     <meta name="google-site-verification" content="7E6baZFoQsN19tJS4g8SKKhLC9uzRtdKIG6Kz-56T-E" />
+  <meta name="google-site-verification" content="7E6baZFoQsN19tJS4g8SKKhLC9uzRtdKIG6Kz-56T-E" />
     <meta name="og:title" content="Slot Gacor 2025 # Rajanya Situs Slot Thailand Pasti Di Kasih Jepe x5000 Malam Hari Ini">
     <meta name="og:type" content="product">
     <meta name="og:description" content="Slot Gacor 2025 adalah pilihan utama para pemain slot online yang mencari situs terpercaya dengan server Thailand paling gacor malam hari ini. Dikenal sebagai rajanya situs slot Thailand, platform ini selalu menghadirkan pola maxwin stabil dan fitur scatter emas yang siap memicu jackpot x5000 kapan saja, khususnya di jam-jam malam gacor.">
